--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -21,5 +21,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-  }
+  },
+  "exclude": [
+    "**/*.spec.ts"
+  ]
 }
