--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,6 +33,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "tailwindcss-patterns": "^0.1.2",
     "zod": "^4.1.9",
     "zustand": "^5.0.8"
   },
