--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/vite": "^4.1.13",
     "@vidstack/react": "^1.12.13",
     "axios": "^1.12.2",
@@ -34,6 +35,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tailwindcss-patterns": "^0.1.2",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.9",
     "zustand": "^5.0.8"
   },
