--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@nestjs/platform-socket.io": "^11.1.6",
-    "@nestjs/websockets": "^11.1.6"
+    "@nestjs/websockets": "^11.1.6",
+    "@uploadthing/react": "^7.3.3",
+    "uploadthing": "^7.7.4"
   }
 }
