--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.6",
+    "@nestjs/websockets": "^11.1.6",
     "@prisma/client": "^6.16.2",
     "@supabase/supabase-js": "^2.74.0",
     "argon2": "^0.44.0",
