--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
+    "ffmpeg": "^0.0.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
