--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/websockets": "^11.1.6",
     "@uploadthing/react": "^7.3.3",
+    "node-fetch": "^3.3.2",
     "uploadthing": "^7.7.4"
   }
 }
