Added socket context on frontend connected with backend and working emits

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -25,6 +25,7 @@
   "exclude": [
     "*/*.spec.ts",
     "./dist/**/*",
-    "./src/gateways/**/*"
+    "./src/gateways/**/*",
+    "./src/modules/party/**/*"
   ]
 }
