--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,8 +36,10 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "ffmpeg": "^0.0.4",
+    "logger": "^0.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
