End Playback handled in video player across all clients

--- a/.gitignore
+++ b/.gitignore
@@ -222,7 +222,9 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 /generated/prisma
 
-./media-server/videos/*
-./media-server/videos
+./apps/media-server/videos/*
+./apps/media-server/videos
+apps/media-server/videos/*
+apps/media-server/videos
 
 .env
