--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-DATABASE_URL
-DIRECT_URL
-JWT_SECRET
+# Backend
+DATABASE_URL=
+DIRECT_URL=
+JWT_SECRET=
+SUPABASE_URL=
+SUPABASE_KEY=
+
+# Frontend
+VITE_API_URL=
