--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^4.43.0",
+    "@tanstack/react-query-devtools": "^4.43.0",
     "@vidstack/react": "^1.12.13",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
