--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "dashjs": "^5.0.3",
     "hls.js": "^1.6.13",
+    "lucide": "^0.575.0",
     "lucide-react": "^0.544.0",
     "media-captions": "^1.0.4",
     "next-themes": "^0.4.6",
